fixed column layout on mobile

--- a/static/css/partials/_base.scss
+++ b/static/css/partials/_base.scss
@@ -41,6 +41,10 @@ hr {
         flex-direction: column-reverse;
         display: flex;
     }
+    
+    .columns.is-multiline {
+        flex-wrap: initial;
+    }
 }
 
 .field-body {
